--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -31,12 +31,12 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "verb-boilerplates": "~0.0.1",
-    "verb-readme-includes": "0.0.3",
+    "verb-readme-includes": "~0.0.5",
     "yeoman-generator": "~0.16.0"
   },
   "devDependencies": {
     "mocha": "*",
-    "verb": "~0.1.10"
+    "verb": "~0.1.15"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
