--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -32,7 +32,8 @@
     "lodash": "~2.4.1",
     "verb-boilerplates": "~0.0.1",
     "verb-readme-includes": "~0.0.5",
-    "yeoman-generator": "~0.16.0"
+    "yeoman-generator": "~0.16.0",
+    "fs-utils": "~0.3.8"
   },
   "devDependencies": {
     "mocha": "*",
