--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.0.6",
+  "version": "0.0.5",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -33,11 +33,11 @@
     "verb-boilerplates": "~0.0.1",
     "verb-readme-includes": "~0.0.5",
     "yeoman-generator": "~0.16.0",
-    "fs-utils": "~0.3.8"
+    "fs-utils": "~0.3.8",
+    "verb": "~0.1.20"
   },
   "devDependencies": {
-    "mocha": "*",
-    "verb": "~0.1.15"
+    "mocha": "*"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
