--- a/app/templates/_verbrc.yml
+++ b/app/templates/_verbrc.yml
@@ -1,7 +1,2 @@
-plugins:   # plugins/*.js
-tags:      # tags/*.js
-
-# Author
-username:  <%= username %>
-author:
-  name:    <%= authorName %>
+docs: docs
+<% if (typeof username !== "undefined") { %>username:  <%= username %><% } %>
