--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -29,14 +29,15 @@
     "npm": ">=1.2.10"
   },
   "dependencies": {
+    "change-case": "~2.0.1",
+    "configstore": "~0.2.3",
     "lodash": "~2.4.1",
     "verb-boilerplates": "~0.0.1",
     "verb-readme-includes": "~0.0.5",
-    "yeoman-generator": "~0.16.0",
-    "fs-utils": "~0.3.8",
-    "verb": "~0.1.20"
+    "yeoman-generator": "~0.16.0"
   },
   "devDependencies": {
+    "verb": "~0.1.20",
     "mocha": "*"
   },
   "peerDependencies": {
