--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -33,13 +33,12 @@
     "configstore": "~0.2.3",
     "lodash": "~2.4.1",
     "normalize-pkg": "~0.1.0",
-    "verb-boilerplates": "~0.0.1",
-    "verb-readme-includes": "~0.0.5",
     "yeoman-generator": "~0.16.0",
-    "verbalize": "~0.1.0"
+    "verbalize": "~0.1.0",
+    "verb": "~0.2.0"
   },
   "devDependencies": {
-    "verb": "~0.1.20",
+    "verb": "~0.2.0",
     "mocha": "*"
   },
   "peerDependencies": {
