adding checks around properties that might not exist. Including verb-readme-includes as a dependency since it's required for verb:doc. Commenting out .verbrc.yml as a required file in the tests.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "normalize-pkg": "~0.1.0",
     "yeoman-generator": "~0.16.0",
     "verbalize": "~0.1.0",
-    "verb": "~0.2.0"
+    "verb": "~0.2.0",
+    "verb-readme-includes": "~0.1.1"
   },
   "devDependencies": {
     "verb": "~0.2.0",
