--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -34,10 +34,10 @@
     "lodash": "~2.4.1",
     "normalize-pkg": "~0.1.5",
     "verb": "~0.2.2",
-    "verb-boilerplates": "0.0.1",
-    "verb-contrib-templates": "0.0.5",
+    "verb-boilerplates": "~0.1.0",
+    "verb-contrib-templates": "~0.1.0",
     "verb-readme-badges": "0.0.5",
-    "verb-readme-includes": "~0.1.4",
+    "verb-readme-includes": "~0.1.5",
     "verbalize": "~0.1.2",
     "yeoman-generator": "~0.17.0-pre.3"
   },
