--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -29,17 +29,15 @@
     "npm": ">=1.2.10"
   },
   "dependencies": {
-    "change-case": "~2.1.0",
-    "configstore": "~0.3.0",
-    "lodash": "~2.4.1",
-    "normalize-pkg": "~0.1.5",
-    "verb": "~0.2.2",
-    "verb-boilerplates": "~0.1.0",
-    "verb-contrib-templates": "~0.1.0",
-    "verb-readme-badges": "0.0.5",
-    "verb-readme-includes": "~0.1.5",
-    "verbalize": "~0.1.2",
-    "yeoman-generator": "~0.17.0-pre.3"
+    "change-case": "^2.1.1",
+    "configstore": "^0.3.0",
+    "normalize-pkg": "^0.1.5",
+    "verb-boilerplates": "^0.1.0",
+    "verb-contrib-templates": "^0.1.5",
+    "verb-readme-badges": "0.0.6",
+    "verb-readme-includes": "^0.1.14",
+    "verbalize": "^0.1.2",
+    "yeoman-generator": "^0.17.0"
   },
   "devDependencies": {
     "chai": "~1.9.1",
