--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -31,6 +31,7 @@
   "dependencies": {
     "change-case": "^2.1.1",
     "configstore": "^0.3.0",
+    "namify": "^0.1.3",
     "normalize-pkg": "^0.1.5",
     "verb-boilerplates": "^0.1.0",
     "verb-contrib-templates": "^0.1.5",
