--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-verb",
   "version": "0.4.0",
-  "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, a zero-configuration markdown documentation generator that is extremely easy to use and extend.",
+  "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
     "name": "Jon Schlinkert",
@@ -29,22 +29,19 @@
     "npm": ">=1.2.10"
   },
   "dependencies": {
-    "bower": "^1.3.7",
+    "app-name": "^0.1.4",
     "change-case": "^2.1.1",
     "configstore": "^0.3.1",
-    "fs-utils": "^0.4.3",
-    "generator-tag": "^0.1.7",
-    "grunt-cli": "^0.1.13",
-    "lodash": "^2.4.1",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.5",
+    "unique-words": "0.0.2",
     "verb-boilerplates": "^0.1.0",
     "verb-readme-badges": "0.0.6",
     "verb-readme-includes": "^0.1.18",
-    "yo": "^1.2.0"
+    "verbalize": "^0.1.2",
+    "yeoman-generator": "^0.17.3"
   },
   "devDependencies": {
-    "chai": "~1.9.1",
     "mocha": "*"
   },
   "peerDependencies": {
