--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -34,29 +34,31 @@
     "configstore": "^0.3.1",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.5",
-    "unique-words": "0.0.2",
     "verb-boilerplates": "^0.1.0",
-    "verb-readme-badges": "0.0.6",
     "verb-readme-includes": "^0.1.18",
     "verbalize": "^0.1.2",
     "yeoman-generator": "^0.17.3"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "verb": "^0.2.15"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
   },
   "keywords": [
     "assemble",
+    "boilerplate",
     "build",
     "config",
     "configuration",
     "doc",
     "docs",
     "documentation",
+    "generate",
     "generator",
     "gh-pages",
+    "kickstart",
     "layout",
     "markdown",
     "marked",
@@ -68,6 +70,7 @@
     "repository",
     "scaffold",
     "template",
+    "templates",
     "yeoman-generator"
   ]
 }
