--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.5.4",
+  "version": "0.6.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -32,6 +32,7 @@
     "app-name": "^0.1.4",
     "change-case": "^2.1.5",
     "configstore": "^0.3.1",
+    "glob": "^4.0.6",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.7",
     "verb-boilerplates": "^0.1.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "mocha": "*",
+    "should": "^4.3.0",
     "verb": "^0.2.15"
   },
   "peerDependencies": {
