--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-verb",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
@@ -14,12 +14,10 @@
   "bugs": {
     "url": "https://github.com/assemble/generator-verb/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/assemble/generator-verb/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/assemble/generator-verb/blob/master/LICENSE-MIT"
+  },
   "main": "app/index.js",
   "scripts": {
     "test": "mocha --reporter spec"
@@ -29,21 +27,18 @@
     "npm": ">=1.2.10"
   },
   "dependencies": {
-    "app-name": "^0.1.4",
-    "change-case": "^2.1.5",
+    "app-name": "^0.2.0",
+    "change-case": "^2.1.6",
     "configstore": "^0.3.1",
-    "glob": "^4.0.6",
+    "glob": "^4.3.2",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.7",
-    "verb-boilerplates": "^0.1.1",
-    "verb-readme-includes": "^0.1.20",
     "verbalize": "^0.1.2",
-    "yeoman-generator": "^0.17.7"
+    "yeoman-generator": "^0.18.5"
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "^4.3.0",
-    "verb": "^0.2.15"
+    "should": "^4.3.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
