--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
-* text=lf
+# Enforce Unix newlines
 * text eol=lf
-*.* eol=lf
+
+# binaries
+*.ai binary
+*.psd binary
+*.jpg binary
+*.gif binary
+*.png binary
+*.jpeg binary
