--- a/package.json
+++ b/package.json
@@ -1,47 +1,43 @@
 {
   "name": "generator-verb",
-  "version": "0.7.0",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
+  "version": "0.8.1",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/assemble/generator-verb.git"
-  },
+  "repository": "assemble/generator-verb",
   "bugs": {
     "url": "https://github.com/assemble/generator-verb/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/assemble/generator-verb/blob/master/LICENSE-MIT"
-  },
+  "license": "MIT",
+  "files": [],
   "main": "app/index.js",
-  "scripts": {
-    "test": "mocha --reporter spec"
-  },
   "engines": {
     "node": ">=0.10.0",
     "npm": ">=1.2.10"
   },
+  "scripts": {
+    "test": "mocha --reporter spec"
+  },
   "dependencies": {
     "app-name": "^0.2.0",
-    "change-case": "^2.1.6",
-    "configstore": "^0.3.1",
-    "glob": "^4.3.2",
+    "chalk": "^0.5.1",
+    "change-case": "^2.2.0",
+    "configstore": "^0.3.2",
+    "glob": "^4.3.5",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.7",
+    "verb-readme-includes": "^0.2.1",
     "verbalize": "^0.1.2",
-    "yeoman-generator": "^0.18.5"
+    "word-wrap": "^1.0.0",
+    "yeoman-generator": "^0.18.7",
+    "yosay": "^1.0.2"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "^4.3.0"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0"
   },
   "keywords": [
     "assemble",
@@ -69,5 +65,8 @@
     "template",
     "templates",
     "yeoman-generator"
-  ]
+  ],
+  "peerDependencies": {
+    "yo": ">=1.0.0"
+  }
 }
