--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-verb",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
     "name": "Jon Schlinkert",
@@ -12,14 +12,14 @@
     "url": "https://github.com/assemble/generator-verb/issues"
   },
   "license": "MIT",
-  "files": [],
+  "files": ["app/", "boilerplate/", "doc/", "mocha/"],
   "main": "app/index.js",
   "engines": {
     "node": ">=0.10.0",
     "npm": ">=1.2.10"
   },
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha"
   },
   "dependencies": {
     "app-name": "^0.2.0",
@@ -36,8 +36,7 @@
     "yosay": "^1.0.2"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "^4.3.0"
+    "mocha": "*"
   },
   "keywords": [
     "assemble",
