--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-verb",
   "description": "Kickstart documentation for any project! This is the official Yeoman generator for Verb, the zero-configuration markdown docs generator that is extremely easy to use and extend.",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "homepage": "https://github.com/assemble/generator-verb",
   "author": {
     "name": "Jon Schlinkert",
@@ -18,7 +18,12 @@
     "type": "MIT",
     "url": "https://github.com/jonschlinkert/load-pkg/blob/master/LICENSE"
   },
-  "files": ["app/", "boilerplate/", "doc/", "mocha/"],
+  "files": [
+    "app/",
+    "boilerplate/",
+    "doc/",
+    "mocha/"
+  ],
   "main": "app/index.js",
   "engines": {
     "node": ">=0.10.0",
@@ -29,10 +34,10 @@
   },
   "dependencies": {
     "app-name": "^0.2.0",
-    "chalk": "^0.5.1",
+    "chalk": "^1.0.0",
     "change-case": "^2.2.0",
     "configstore": "^0.3.2",
-    "glob": "^4.3.5",
+    "glob": "^5.0.3",
     "namify": "^0.1.3",
     "normalize-pkg": "^0.1.7",
     "verb-readme-includes": "^0.2.1",
